adding index.js file

--- a/.github/workflows/learning-github-actions.yml
+++ b/.github/workflows/learning-github-actions.yml
@@ -1,13 +1,20 @@
-name: learning-github-actios
+name: learning-github-actions
 run-name: ${{ github.actor }} is learning github actions.
 on: [push]
 jobs:
-  check-bats-version:
-    runs-on: ubuntu-latest
+  test:
+    name: Test on node  ${{ matrix.node_version }} and ${{ matrix.os }}.
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        node_version: ['8', '10', '12']
+        os: ['ubuntu-latest','windows-latest', 'macOS-latest']
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node_version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node_version }}
+
+    - name: run node app
+      run:  node ${{ github.workspace }}/index.js
