--- a/.github/workflows/learning-github-actions.yml
+++ b/.github/workflows/learning-github-actions.yml
@@ -3,6 +3,7 @@ run-name: ${{ github.actor }} is learning github actions.
 on: [push]
 jobs:
   example-job:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
