--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,3 +10,4 @@ jobs:
         uses: actions/download-artifact@v3
         with: 
           name: output-log-file
+          needs: enviroment test
