--- a/.github/workflows/learning-github-actions.yml
+++ b/.github/workflows/learning-github-actions.yml
@@ -10,4 +10,5 @@ jobs:
         id: demo
         run: exit 1
       - name: the demo step has failed
+        run: eho "hola mundo"
         if: ${{ failure() && steps.demo.conclusion == 'failure' }}
